Update to java 21
Move the project from java 11 to 21, swap lombok for plain records,
and update tests to junit 5.